diesel_compile_tests/tests/fail/select_for_update_no_wait_cannot_be_used_on_sqlite.rs
extern crate diesel;

use diesel::*;
use diesel::sqlite::SqliteConnection;

table! {
    users {
        id -> Integer,
    }
}

fn main() {
    let conn = SqliteConnection::establish("").unwrap();
    users::table
        .for_update()
        .no_wait()
        .load(&conn)
        .unwrap();
}
